--- a/index.html
+++ b/index.html
@@ -5,68 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="p:domain_verify" content="f5dd7fa1eaaf2674895e0724a90635f9"/>
     <title>Best Room Decor Ideas for a Stylish Home</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        .container {
-            max-width: 500px;
-            margin: auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        img {
-            width: 100%;
-            height: auto;
-            display: block;
-            margin-bottom: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        @media (max-width: 600px) {
-            body {
-                padding: 10px;
-            }
-            .container {
-                padding: 15px;
-            }
-        }
-    </style>
+    <style>body{font-family:Arial,sans-serif;margin:0;padding:20px;background-color:#f4f4f4}.container{max-width:500px;margin:auto;background:white;padding:20px;box-shadow:0 0 10px rgba(0,0,0,.1);border-radius:8px}img{width:100%;height:auto;display:block;margin-bottom:20px}h1{text-align:center}@media(max-width:600px){body{padding:10px}.container{padding:15px}}</style>
 </head>
 <body>
     <div class="container">
-        <center><script type="text/javascript">
-	atOptions = {
-		'key' : '32417884c3de3b64cea14b0307a6b0c1',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	</script>
-	<script type="text/javascript" src="//roastwearwritten.com/32417884c3de3b64cea14b0307a6b0c1/invoke.js"></script></center>
-        
-        // Artikel
-        
-        <img src="room-decor-ideas0.png" alt="Beautiful Room Decor">
-        <img src="room-decor-ideas1.png" alt="Room Decor Example">
-        <img src="room-decor-ideas2.png" alt="Room Decor Example">
-        <img src="room-decor-ideas3.png" alt="Modern Room Decor">
-        <img src="room-decor-ideas4.png" alt="Cozy Room Design">
-        <img src="room-decor-ideas5.png" alt="Elegant Room Interior">        
-        <center><script async="async" data-cfasync="false" src="//roastwearwritten.com/89cc20f33c2c51acee67061d97510ab0/invoke.js"></script>
-	<div id="container-89cc20f33c2c51acee67061d97510ab0"></div></center>
-        <img src="room-decor-ideas6.png" alt="Room Decor Example">
-        <img src="room-decor-ideas7.png" alt="Room Decor Example">
-        <img src="room-decor-ideas8.png" alt="Modern Room Decor">
-        <img src="room-decor-ideas9.png" alt="Cozy Room Design">
-        <img src="room-decor-ideas10.png" alt="Elegant Room Interior"> 
+        <center>
+            <script async src="//roastwearwritten.com/32417884c3de3b64cea14b0307a6b0c1/invoke.js"></script>
+        </center>
+
+        <img src="room-decor-ideas0.png" alt="Beautiful Room Decor" loading="lazy">
+        <img src="room-decor-ideas1.png" alt="Room Decor Example" loading="lazy">
+        <img src="room-decor-ideas2.png" alt="Room Decor Example" loading="lazy">
+        <img src="room-decor-ideas3.png" alt="Modern Room Decor" loading="lazy">
+        <img src="room-decor-ideas4.png" alt="Cozy Room Design" loading="lazy">
+        <img src="room-decor-ideas5.png" alt="Elegant Room Interior" loading="lazy">
+
+        <center>
+            <script async src="//roastwearwritten.com/9510d3602b56c57cff4611848c6319bb/invoke.js"></script>
+            <div id="container-9510d3602b56c57cff4611848c6319bb"></div>
+        </center>
+
+        <img src="room-decor-ideas6.png" alt="Room Decor Example" loading="lazy">
+        <img src="room-decor-ideas7.png" alt="Room Decor Example" loading="lazy">
+        <img src="room-decor-ideas8.png" alt="Modern Room Decor" loading="lazy">
+        <img src="room-decor-ideas9.png" alt="Cozy Room Design" loading="lazy">
+        <img src="room-decor-ideas10.png" alt="Elegant Room Interior" loading="lazy">
+
+        <center>
+            <script async src="//roastwearwritten.com/7f6b926e1bf322fbcf1e5d6c882bc5e7/invoke.js"></script>
+            <div id="container-7f6b926e1bf322fbcf1e5d6c882bc5e7"></div>
+        </center>
     </div>
 </body>
 </html>
