--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <center>
-            <script async src="//roastwearwritten.com/32417884c3de3b64cea14b0307a6b0c1/invoke.js"></script>
-        </center>
+        <center><script type="text/javascript">
+	atOptions = {
+		'key' : '28e0381782b75d3d6fdd3c563dd50869',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//roastwearwritten.com/28e0381782b75d3d6fdd3c563dd50869/invoke.js"></script></center>
         <img src="room-decor-ideas0.png" alt="Beautiful Room Decor" loading="lazy">
         <h1>Room Decor Ideas for Teenage Girls: Creating a Stylish and Functional Bedroom</h1>
 <p>Designing a bedroom for a teenage girl can be both exciting and challenging. This space needs to be a reflection of her personality while providing functionality for studying, relaxing, and socializing. Here are some innovative and stylish room decor ideas bedroom for teenage girls that balance aesthetics with practicality.</p>
